Implement SideBar component with active state for subreddits

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,7 +1,7 @@
 @import './styles/variables.scss';
 
 .app {
-  background-color: $background-color;
+  background-color: $background-color-2;
   color: $text-color;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
