--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,14 +3,16 @@ $primary-color: #007bff;
 $primary-color-hover: #0056b3;
 $secondary-color: rgba(204, 204, 204, 0.5);
 $background-color: #171717;
+$background-color-2: #161b22;
 $border-color: #ccc;
 $text-color: #dadada;
+$dark-text-color: #687a83;
 $success-color: #22b344;
 $danger-color: #dc3545;
-$warning-color: #ffc107;
-$info-color: #17a2b8;
 $light-color: #f8f9fa;
-$dark-color: #343a40;
+$dark-color: #343d42;
+$darker-color: #181c1f;
+$darker-hover-color: rgba(36, 44, 46, 0.8);
 
 // Font Variables
 $font-family: 'Roboto', sans-serif;
