--- a/src/components/PostComments/PostComments.module.scss
+++ b/src/components/PostComments/PostComments.module.scss
@@ -25,7 +25,7 @@
     padding: 0 1rem 1rem 1rem;
     text-decoration: underline;
     text-underline-offset: 0.3rem;
-    text-decoration-color: $secondary-color;
+    text-decoration-color: $dark-color;
 
     & span {
       font-weight: 400;
