--- a/src/components/PostList/PostList.module.scss
+++ b/src/components/PostList/PostList.module.scss
@@ -1,24 +1,25 @@
 @import '../../styles/variables.scss';
 
-.postListWrapper {
+.container {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
-  padding: 1rem 3rem;
+  gap: 1.5rem;
+  padding: 1rem 10rem 0 10rem;
   grid-column: 2 / 4;
 
-  .postList {
-    border: 1px solid $secondary-color;
-    padding: 2rem;
+  .post {
+    padding: 4rem 2rem;
     border-radius: 8px;
     transition: box-shadow 0.2s;
     width: 100%;
     list-style: none;
     display: flex;
     gap: 2rem;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    background-color: $background-color-2;
 
     &:hover {
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
     }
 
     &.commentsVisible {
@@ -34,9 +35,10 @@
       cursor: pointer;
     }
 
-    & .postVotes {
+    &__votes {
       display: flex;
       flex-direction: column;
+      text-align: center;
 
       & .like {
         color: $success-color;
@@ -47,31 +49,47 @@
       }
     }
 
-    & .postWrapper {
+    &__wrapper {
       width: 100%;
       display: flex;
       flex-direction: column;
 
-      & .postTitle {
+      &__title {
         font-size: 1rem;
         font-weight: 600;
         width: 100%;
         text-align: left;
+        padding: 0.5rem 1.5rem 0 1.5rem;
       }
 
-      & .postDetails {
+      &__imageContainer {
+        width: 80%;
+        height: 40rem;
+        display: flex;
+        justify-content: center;
+        margin: 1rem 1.5rem;
+
+        &__image {
+          width: 100%;
+          max-width: 100%;
+          height: auto;
+          border-radius: 1rem;
+        }
+      }
+
+      &__details {
         width: 100%;
         display: flex;
         justify-content: space-between;
-        border-top: $secondary-color 1px solid;
-        padding-top: 0.3rem;
+        border-top: $dark-color 1px solid;
+        padding: 0.5rem 1.5rem 0 1.5rem;
 
-        & .postAuthor {
+        &__author {
           font-size: $paragraph;
           color: #007bff;
         }
 
-        & .postTimeAgo {
+        &__timeAgo {
           color: $secondary-color;
           font-size: $paragraph;
           font-weight: lighter;
