--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -11,35 +11,40 @@
   gap: 0.5rem;
   margin-bottom: 1rem;
   margin-top: 1rem;
-  width: 60%;
+  width: 65%;
   justify-content: right;
 }
 
 .input {
   flex: 1;
-  padding: 0.5rem;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-  transition: border-color 0.3s;
+  padding: 0.8rem 1rem;
+  border: none;
+  border-radius: 4rem;
+  background-color: $dark-color;
+  color: $text-color;
+  transition: background-color 0.3s;
 
   &:focus {
     outline: none;
     border-color: $primary-color;
+    background-color: $darker-color;
   }
+
+  &:hover {
+    background-color: $darker-color;
+  }
+
   &::placeholder {
-    color: #b7b7b7;
-  }
-  &:focus::placeholder {
-    color: transparent;
+    color: $dark-text-color;
   }
 }
 
 .button {
-  padding: 0.5rem 1rem;
+  padding: 0.9rem;
   border: none;
   background-color: $primary-color;
   color: #fff;
-  border-radius: 4px;
+  border-radius: 3rem;
   cursor: pointer;
   transition: background-color 0.3s;
 
