--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 * {
   margin: 0;
   padding: 0;
@@ -5,7 +7,7 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: $font-family;
   line-height: 1.6;
 }
 
