--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,3 +1,4 @@
+@use '../../styles/mixins' as m;
 @import '../../styles/variables.scss';
 
 .header {
@@ -14,10 +15,36 @@
   align-content: center;
   gap: 1rem;
 
+  @include m.breakpoint-max('xl') {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  @include m.breakpoint-max('sm') {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+    justify-content: center;
+    align-items: center;
+  }
+
   nav {
     display: flex;
     justify-content: left;
     padding: 0 5rem;
+    grid-column: 1 / 2;
+
+    @include m.breakpoint-max('md') {
+      padding: 0 2rem;
+    }
+
+    @include m.breakpoint-max('sm') {
+      flex-direction: column;
+      gap: 0.5rem;
+      justify-content: center;
+      align-items: center;
+    }
 
     & a {
       color: #fff;
@@ -29,6 +56,10 @@
       transition: background-color 0.3s;
       align-self: center;
       display: flex;
+
+      @include m.breakpoint-max('sm') {
+        margin: 0;
+      }
     }
     & a:hover {
       background-color: $primary-color-hover;
