--- a/src/components/PostList/PostList.module.scss
+++ b/src/components/PostList/PostList.module.scss
@@ -1,11 +1,32 @@
+@use '../../styles/mixins' as m;
 @import '../../styles/variables.scss';
 
 .container {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  padding: 1rem 10rem 0 10rem;
+  padding: 1rem 20rem 0 20rem;
   grid-column: 2 / 4;
+
+  @include m.breakpoint-max('xxl') {
+    padding: 1rem 15rem;
+  }
+
+  @include m.breakpoint-max('xl') {
+    padding: 1rem 5rem;
+  }
+
+  @include m.breakpoint-max('lg') {
+    padding: 1rem;
+  }
+
+  @include m.breakpoint-max('md') {
+    padding: 1rem 0.5rem;
+  }
+
+  @include m.breakpoint-max('sm') {
+    padding: 1rem;
+  }
 
   .post {
     padding: 4rem 2rem;
@@ -17,6 +38,12 @@
     gap: 2rem;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     background-color: $background-color-2;
+
+    @include m.breakpoint-max('sm') {
+      flex-direction: column;
+      gap: 1rem;
+      padding: 2rem 1rem;
+    }
 
     &:hover {
       box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
@@ -40,6 +67,13 @@
       flex-direction: column;
       text-align: center;
 
+      @include m.breakpoint-max('sm') {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+      }
+
       & .like {
         color: $success-color;
       }
@@ -60,6 +94,12 @@
         width: 100%;
         text-align: left;
         padding: 0.5rem 1.5rem 0 1.5rem;
+
+        @include m.breakpoint-max('sm') {
+          text-align: center;
+          font-size: 0.8rem;
+          padding-bottom: 1rem;
+        }
       }
 
       &__imageContainer {
@@ -69,7 +109,13 @@
         justify-content: center;
         margin: 1rem 1.5rem;
 
+        @include m.breakpoint-max('sm') {
+          height: auto;
+          margin: 1rem auto;
+        }
+
         &__image {
+          display: block;
           width: 100%;
           max-width: 100%;
           height: auto;
@@ -83,6 +129,12 @@
         justify-content: space-between;
         border-top: $dark-color 1px solid;
         padding: 0.5rem 1.5rem 0 1.5rem;
+
+        @include m.breakpoint-max('xsm') {
+          flex-direction: column;
+          align-items: center;
+          gap: 0.5rem;
+        }
 
         &__author {
           font-size: $paragraph;
