--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -1,3 +1,4 @@
+@use '../../styles/mixins' as m;
 @import '../../styles/variables.scss';
 
 .sideBar {
@@ -11,6 +12,12 @@
   background-color: $background-color-2;
   padding-left: 1rem;
 
+  @include m.breakpoint-max('sm') {
+    grid-column: 1 / 4;
+    margin: 0;
+    padding: 0;
+  }
+
   &__heading {
     align-self: flex-start;
     font-size: 1.5rem;
@@ -20,6 +27,10 @@
     padding-bottom: 0.7rem;
     border-bottom: 1px solid $dark-color;
     width: 100%;
+
+    @include m.breakpoint-max('md') {
+      display: none;
+    }
   }
 
   &__list {
@@ -32,8 +43,32 @@
     padding: 1rem;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 
+    @include m.breakpoint-max('md') {
+      flex-direction: row;
+      overflow-x: auto;
+      white-space: nowrap;
+
+      &::-webkit-scrollbar {
+        width: 8px;
+      }
+      &::-webkit-scrollbar-track {
+        background-color: $background-color-2;
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: $dark-color;
+        border-radius: 4px;
+      }
+      &::-webkit-scrollbar-thumb:hover {
+        background-color: $darker-hover-color;
+      }
+    }
+
     &:first-child {
       border-top: 1px solid $dark-color;
+
+      @include m.breakpoint-max('md') {
+        border-top: none;
+      }
     }
 
     & li {
