--- a/src/components/PostList/PostList.module.scss
+++ b/src/components/PostList/PostList.module.scss
@@ -4,28 +4,19 @@
 .container {
   display: flex;
   flex-direction: column;
+  margin: 8rem auto 4rem auto;
+  padding: 0 1rem;
   gap: 1.5rem;
-  padding: 1rem 20rem 0 20rem;
-  grid-column: 2 / 4;
-
-  @include m.breakpoint-max('xxl') {
-    padding: 1rem 15rem;
-  }
-
-  @include m.breakpoint-max('xl') {
-    padding: 1rem 5rem;
-  }
-
-  @include m.breakpoint-max('lg') {
-    padding: 1rem;
-  }
-
-  @include m.breakpoint-max('md') {
-    padding: 1rem 0.5rem;
-  }
+  position: relative;
 
   @include m.breakpoint-max('sm') {
-    padding: 1rem;
+    top: 11rem;
+    margin: 0 auto;
+  }
+
+  @include m.breakpoint('lg') {
+    max-width: calc(100vw - 27rem);
+    width: 65rem;
   }
 
   .post {
@@ -38,6 +29,7 @@
     gap: 2rem;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     background-color: $background-color-2;
+    border-top: 1px solid $dark-color;
 
     @include m.breakpoint-max('sm') {
       flex-direction: column;
@@ -131,9 +123,9 @@
         padding: 0.5rem 1.5rem 0 1.5rem;
 
         @include m.breakpoint-max('xsm') {
-          flex-direction: column;
           align-items: center;
           gap: 0.5rem;
+          flex-flow: column;
         }
 
         &__author {
