--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -8,22 +8,9 @@
   width: 90%;
   grid-column: 2 / 4;
 
-  @include m.breakpoint('md') {
-    width: 100%;
-  }
-
   @include m.breakpoint('lg') {
-    width: 50%;
+    max-width: 70rem;
     padding: 0 5rem;
-  }
-
-  @include m.breakpoint('xl') {
-    width: 80%;
-    padding: 0;
-  }
-
-  @include m.breakpoint('xxl') {
-    width: 60%;
   }
 }
 
@@ -32,28 +19,19 @@
   gap: 0.5rem;
   margin-bottom: 1rem;
   margin-top: 1rem;
+  min-width: 20rem;
   width: 65%;
   justify-content: right;
-
-  @include m.breakpoint-max('xl') {
-    width: 100%;
-  }
-
-  @include m.breakpoint-max('lg') {
-    width: 80%;
-  }
-
-  @include m.breakpoint-max('md') {
-    width: 100%;
-    gap: 1rem;
-    padding: 0 2rem;
-  }
 
   @include m.breakpoint-max('sm') {
     width: 100%;
     flex-direction: column;
     gap: 1rem;
     padding: 0;
+  }
+
+  @include m.breakpoint-max('xsm') {
+    min-width: 10rem;
   }
 }
 
