--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -2,19 +2,51 @@
 @import '../../styles/variables.scss';
 
 .sideBar {
-  grid-column: 1 / 2;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 1rem;
+  min-width: 25rem;
+  max-width: 25rem;
   gap: 1rem;
   background-color: $background-color-2;
   padding-left: 1rem;
+  grid-column: 1 / 2;
+  position: sticky;
+  top: 8rem;
+  overflow-y: auto;
+  height: calc(100vh - 7rem);
+  border-right: 1px solid $dark-color;
 
-  @include m.breakpoint-max('sm') {
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: $background-color-2;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    // background-color: $dark-color;
+    background-color: transparent;
+    border-radius: 4px;
+  }
+
+  &:hover {
+    &::-webkit-scrollbar-thumb {
+      background-color: $darker-hover-color;
+    }
+  }
+
+  @include m.breakpoint-max('md') {
     margin: 0;
     padding: 0;
+    height: auto;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    position: relative;
+    top: 7rem;
+  }
+
+  @include m.breakpoint-max('sm') {
+    top: 11rem;
   }
 
   &__heading {
@@ -46,6 +78,8 @@
       flex-direction: row;
       overflow-x: auto;
       white-space: nowrap;
+      padding: 0.5rem;
+      gap: 0.5rem;
 
       &::-webkit-scrollbar {
         width: 8px;
