--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -21,10 +21,9 @@
 
   @include m.breakpoint-max('sm') {
     display: flex;
-    flex-direction: column;
-    gap: 0;
     justify-content: center;
     align-items: center;
+    gap: 0.5rem;
   }
 
   nav {
@@ -34,14 +33,7 @@
     grid-column: 1 / 2;
 
     @include m.breakpoint-max('md') {
-      padding: 0 2rem;
-    }
-
-    @include m.breakpoint-max('sm') {
-      flex-direction: column;
-      gap: 0.5rem;
-      justify-content: center;
-      align-items: center;
+      padding: 0;
     }
 
     & a {
