--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -1,86 +1,91 @@
 @use '../../styles/mixins' as m;
 @import '../../styles/variables.scss';
 
-.searchBarWrapper {
+.searchBar {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 90%;
+  width: 85%;
   grid-column: 2 / 4;
 
   @include m.breakpoint('lg') {
     max-width: 70rem;
     padding: 0 5rem;
   }
-}
 
-.searchBar {
-  display: flex;
-  gap: 0.5rem;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
-  min-width: 20rem;
-  width: 65%;
-  justify-content: right;
-
-  @include m.breakpoint-max('sm') {
-    width: 100%;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 0;
-  }
-
-  @include m.breakpoint-max('xsm') {
-    min-width: 10rem;
-  }
-}
-
-.input {
-  flex: 1;
-  padding: 0.8rem 1rem;
-  border: none;
-  border-radius: 4rem;
-  background-color: $dark-color;
-  color: $text-color;
-  transition: background-color 0.3s;
-
-  @include m.breakpoint-max('lg') {
-    width: 100%;
-  }
-
-  &:focus {
-    outline: none;
-    border-color: $primary-color;
-    background-color: $darker-color;
-  }
-
-  &:hover {
-    background-color: $darker-color;
-  }
-
-  &::placeholder {
-    color: $dark-text-color;
+  &__form {
+    display: flex;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    min-width: 20rem;
+    width: 65%;
+    justify-content: right;
 
     @include m.breakpoint-max('sm') {
-      text-align: center;
+      width: 100%;
+      gap: 1rem;
+      padding: 0;
+      min-width: 10rem;
     }
-  }
-}
 
-.button {
-  padding: 0.5rem 1.2rem;
-  border: none;
-  background-color: $primary-color;
-  color: #fff;
-  border-radius: 2rem;
-  cursor: pointer;
-  transition: background-color 0.3s;
+    &__inputContainer {
+      position: relative;
+      width: 100%;
 
-  @include m.breakpoint-max('sm') {
-    align-self: center;
-  }
+      &__input {
+        flex: 1;
+        padding: 0.8rem 1rem 0.8rem 2.5rem;
+        border: none;
+        border-radius: 4rem;
+        background-color: $dark-color;
+        color: $text-color;
+        transition: background-color 0.3s;
+        width: 100%;
 
-  &:hover {
-    background-color: #0056b3;
+        &:focus {
+          outline: none;
+          border-color: $primary-color;
+          background-color: $darker-color;
+        }
+
+        &:hover {
+          background-color: $darker-color;
+        }
+
+        &::placeholder {
+          color: $dark-text-color;
+          font-size: 0.9rem;
+
+          @include m.breakpoint-max('sm') {
+            text-align: center;
+          }
+        }
+      }
+
+      &__button {
+        position: absolute;
+        top: 50%;
+        left: 0.5rem;
+        transform: translateY(-50%);
+        padding: 0.5rem 0.5rem;
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
+        display: flex;
+
+        @include m.breakpoint-max('sm') {
+          align-self: center;
+        }
+
+        & svg {
+          width: 1.2rem;
+          height: 1.2rem;
+          & path {
+            fill: $text-color;
+          }
+        }
+      }
+    }
   }
 }
