--- a/src/components/PostDetails/PostDetails.module.scss
+++ b/src/components/PostDetails/PostDetails.module.scss
@@ -163,5 +163,51 @@
         margin-top: 2rem;
       }
     }
+
+    &__backBtnWrapper {
+      position: fixed;
+      display: flex;
+      justify-content: left;
+      align-items: center;
+      top: 11.25rem;
+      left: 0;
+      width: 100%;
+      height: 2.7rem;
+      z-index: 103;
+      background-color: $background-color-2;
+      transition: all 0.3s;
+
+      @include m.breakpoint-max('xl') {
+        top: 5.6rem;
+        left: 27rem;
+      }
+
+      @include m.breakpoint-max('md') {
+        top: 11.25rem;
+        left: 0;
+      }
+
+      @include m.breakpoint('xl') {
+        display: flex;
+        justify-content: center;
+        top: 5.6rem;
+        background-color: transparent;
+        left: -16rem;
+      }
+    }
+
+    &__backBtn {
+      background-color: $primary-color;
+      color: $text-color;
+      font-size: 0.9rem;
+      padding: 0.2rem 0.8rem;
+      margin-left: 1rem;
+      border-radius: 5rem;
+      transition: all 0.3s;
+
+      &:hover {
+        background-color: $primary-color-hover;
+      }
+    }
   }
 }
