feat: Move scroll logic to PostDetailsPage and add visible class for back button

--- a/src/components/PostDetails/PostDetails.module.scss
+++ b/src/components/PostDetails/PostDetails.module.scss
@@ -175,7 +175,14 @@
       height: 2.7rem;
       z-index: 103;
       background-color: $background-color-2;
-      transition: all 0.3s;
+      opacity: 0;
+      transform: translateY(-10px);
+      transition: opacity 0.3s, transform 0.3s;
+
+      &.visible {
+        opacity: 1;
+        transform: translateY(0);
+      }
 
       @include m.breakpoint-max('xl') {
         top: 5.6rem;
@@ -200,7 +207,7 @@
       background-color: $primary-color;
       color: $text-color;
       font-size: 0.9rem;
-      padding: 0.2rem 0.8rem;
+      padding: 0.1rem 0.8rem;
       margin-left: 1rem;
       border-radius: 5rem;
       transition: all 0.3s;
