--- a/src/components/PostComments/PostComments.module.scss
+++ b/src/components/PostComments/PostComments.module.scss
@@ -5,7 +5,11 @@
   list-style-type: none;
   margin: 5rem 0;
   padding: 0;
-  padding-left: 1rem;
+  padding-left: 3.2rem;
+
+  @include m.breakpoint-max('md') {
+    padding-left: 1rem;
+  }
 }
 
 .postComment {
