--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -17,3 +17,10 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+button {
+  display: flex;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+}
