--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,7 @@ $success-color: #22b344;
 $danger-color: #dc3545;
 $light-color: #f8f9fa;
 $dark-color: #343d42;
+$dark-color-hover: #404a4f;
 $darker-color: #181c1f;
 $darker-hover-color: rgba(36, 44, 46, 0.8);
 
