--- a/src/components/Icons/CommentsIcon.module.scss
+++ b/src/components/Icons/CommentsIcon.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.scss';
 
 .commentsIcon {
-  color: $secondary-color;
+  color: $text-color;
   font-size: 1.5rem;
   cursor: pointer;
 }
