--- a/src/components/Icons/Downvote.module.scss
+++ b/src/components/Icons/Downvote.module.scss
@@ -2,10 +2,16 @@
 @import '../../styles/variables.scss';
 
 .downvoteArrow {
-  fill: $secondary-color;
+  fill: $text-color;
+  border-radius: 50%;
+  width: 1.8rem;
+  height: 1.8rem;
+  padding: 0.2rem;
+  transition: all 0.2s;
 
   &:hover {
     fill: $danger-color;
+    background-color: $dark-color-hover;
   }
 
   @include m.breakpoint-max('sm') {
@@ -17,4 +23,9 @@
 
 .downvoted {
   fill: $danger-color;
+  background-color: $dark-color-hover;
+  border-radius: 50%;
+  width: 1.8rem;
+  height: 1.8rem;
+  padding: 0.2rem;
 }
