--- a/src/components/PostDetails/PostDetails.module.scss
+++ b/src/components/PostDetails/PostDetails.module.scss
@@ -2,20 +2,19 @@
 @import '../../styles/variables.scss';
 
 .post {
-  padding: 4rem 2rem;
+  padding: 2rem;
   border-radius: 8px;
   transition: box-shadow 0.2s;
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   background-color: $background-color-2;
   border-top: 1px solid $dark-color;
 
   @include m.breakpoint-max('sm') {
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.2rem;
     padding: 2rem 1rem;
   }
 
@@ -30,42 +29,47 @@
     }
   }
 
-  & button {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
+  &__info {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 1rem;
+    padding: 0 1.5rem;
+
+    @include m.breakpoint-max('md') {
+      justify-content: center;
+    }
+
+    @include m.breakpoint-max('xsm') {
+      flex-wrap: wrap;
+      gap: 0.5rem;
+      padding: 0 0.5rem;
+    }
+
+    &__author {
+      font-size: $paragraph;
+      color: #007bff;
+    }
+
+    &__timeAgo {
+      color: $secondary-color;
+      font-size: $paragraph;
+      font-weight: lighter;
+      display: flex;
+      align-items: center;
+
+      & span {
+        font-weight: 600;
+        margin-right: 0.2rem;
+      }
+    }
   }
 
   &__contentWrapper {
     display: flex;
-
-    @include m.breakpoint-max('sm') {
-      flex-direction: column;
-    }
   }
 
-  &__votes {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-
-    @include m.breakpoint-max('sm') {
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      gap: 1rem;
-    }
-
-    & .like {
-      color: $success-color;
-    }
-
-    & .dislike {
-      color: $danger-color;
-    }
-  }
-
-  &__wrapper {
+  &__content {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -75,38 +79,62 @@
       font-weight: 600;
       width: 100%;
       text-align: left;
-      padding: 0.5rem 1.5rem 0 1.5rem;
+      padding: 0 1.5rem;
 
-      @include m.breakpoint-max('sm') {
+      @include m.breakpoint-max('md') {
         text-align: center;
         font-size: 0.8rem;
         padding-bottom: 1rem;
+      }
+
+      @include m.breakpoint-max('sm') {
+        padding: 0;
       }
     }
 
     &__imageContainer,
     &__videoContainer {
       width: 90%;
-      height: 35rem;
+      max-height: 35rem;
+      height: 100%;
       display: flex;
       justify-content: center;
       margin: 1rem auto;
-
-      @include m.breakpoint-max('xl') {
-        height: 30rem;
-      }
-
-      @include m.breakpoint-max('sm') {
-        height: auto;
-      }
 
       &__image,
       & video {
         display: block;
         width: 100%;
         max-width: 100%;
-        height: auto;
+        max-height: 100vw;
+        height: 100%;
         border-radius: 1rem;
+        object-fit: contain;
+      }
+    }
+
+    &__votes {
+      display: flex;
+      flex-direction: row;
+      border-radius: 2rem;
+      background-color: $dark-color;
+      align-items: center;
+      padding: 0.3rem 0.4rem;
+      gap: 0.5rem;
+
+      @include m.breakpoint-max('sm') {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 0.2rem;
+      }
+
+      & .like {
+        color: $success-color;
+      }
+
+      & .dislike {
+        color: $danger-color;
       }
     }
 
@@ -117,30 +145,31 @@
       border-top: $dark-color 1px solid;
       padding: 0.5rem 1.5rem 0 1.5rem;
 
+      @include m.breakpoint-max('sm') {
+        padding: 0.5rem 0.5rem 0 0.5rem;
+      }
+
       @include m.breakpoint-max('xsm') {
         align-items: center;
         gap: 0.5rem;
         flex-flow: column;
       }
 
-      &__author {
-        font-size: $paragraph;
-        color: #007bff;
-      }
-
-      &__timeAgo {
-        color: $secondary-color;
-        font-size: $paragraph;
-        font-weight: lighter;
-      }
-
-      & button {
+      &__commentsIcon {
         display: flex;
         align-items: center;
         gap: 0.3rem;
-        color: $secondary-color;
+        color: $text-color;
+        background-color: $dark-color;
+        padding: 0.4rem 0.5rem;
+        border-radius: 2rem;
         font-size: $paragraph;
         font-weight: lighter;
+        transition: all 0.2s;
+
+        &:hover {
+          background-color: $dark-color-hover;
+        }
       }
     }
 
