--- a/src/components/PostDetails/PostDetails.module.scss
+++ b/src/components/PostDetails/PostDetails.module.scss
@@ -2,7 +2,7 @@
 @import '../../styles/variables.scss';
 
 .post {
-  padding: 2rem;
+  padding: 0.5rem 1rem 2rem 1rem;
   border-radius: 8px;
   transition: box-shadow 0.2s;
   list-style: none;
@@ -14,8 +14,6 @@
 
   @include m.breakpoint-max('sm') {
     flex-direction: column;
-    gap: 0.2rem;
-    padding: 2rem 1rem;
   }
 
   &:hover {
@@ -34,7 +32,7 @@
     justify-content: left;
     align-items: center;
     gap: 1rem;
-    padding: 0 1.5rem;
+    padding: 0 1.5rem 0.5rem 1.5rem;
 
     @include m.breakpoint-max('md') {
       justify-content: center;
