--- a/src/components/PostDetails/PostDetails.module.scss
+++ b/src/components/PostDetails/PostDetails.module.scss
@@ -31,17 +31,23 @@
     display: flex;
     justify-content: left;
     align-items: center;
-    gap: 1rem;
     padding: 0 1.5rem 0.5rem 1.5rem;
 
     @include m.breakpoint-max('md') {
-      justify-content: center;
+      padding-left: 0.5rem;
     }
 
     @include m.breakpoint-max('xsm') {
       flex-wrap: wrap;
       gap: 0.5rem;
       padding: 0 0.5rem;
+    }
+
+    &__box {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      border-bottom: 1px solid $dark-color;
     }
 
     &__author {
@@ -80,13 +86,9 @@
       padding: 0 1.5rem;
 
       @include m.breakpoint-max('md') {
-        text-align: center;
         font-size: 0.8rem;
         padding-bottom: 1rem;
-      }
-
-      @include m.breakpoint-max('sm') {
-        padding: 0;
+        padding-left: 0.5rem;
       }
     }
 
@@ -133,6 +135,12 @@
 
       & .dislike {
         color: $danger-color;
+      }
+
+      & p {
+        font-size: 0.8rem;
+        font-weight: lighter;
+        color: $text-color;
       }
     }
 
