--- a/src/components/Icons/Downvote.module.scss
+++ b/src/components/Icons/Downvote.module.scss
@@ -23,9 +23,12 @@
 
 .downvoted {
   fill: $danger-color;
-  background-color: $dark-color-hover;
   border-radius: 50%;
   width: 1.8rem;
   height: 1.8rem;
   padding: 0.2rem;
+
+  &:hover {
+    background-color: $dark-color-hover;
+  }
 }
